# cpp_python_embedding

./: CMakeLists.txt  README.md  error
parser/: CMakeLists.txt
parser/src/: pythonparser.cpp
test_lib/: CMakeLists.txt
test_lib/include/test/: lib.h
test_lib/src/: asdf.py  lib.cpp
